openshift-project3-networkpolicy/allow-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
  namespace: backend
spec:
  podSelector: {}
  ingress:
  - from:
    - nameSpaceSelector:
         matchLabels:
            name: frontend
